fix: use overflow-wrap: break-word in graph editor nodes
related #168

--- a/editor.planx.uk/src/pages/FlowEditor/floweditor.scss
+++ b/editor.planx.uk/src/pages/FlowEditor/floweditor.scss
@@ -32,7 +32,6 @@ $pixel: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAA
   flex: 1;
   display: flex;
   overflow: hidden;
-  word-break: break-all;
 }
 
 #fake-browser {
@@ -150,6 +149,7 @@ $pixel: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAA
 
     > span {
       max-width: 170px;
+      overflow-wrap: break-word;
     }
 
     > svg {
